--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
 :root {
     --primaryColor: #fff;
     --navColor1: #21292c;
-    --navColor2: #aa3e39;
-    --navColor3: #aa6e39;
-    --navColor4: #236267;
-    --navColor5: #2c8437;
+    --navColor2: #d81159;
+    --navColor3: #8f2d56;
+    --navColor4: #6d5a72;
+    --navColor5: #2f0a28;
 }
 
 html {
@@ -14,12 +15,81 @@ html {
 body {
     margin: 0;
     background: #000;
+    font-family: Nunito, sans-serif;
 }
 
 /* --- Navigation Menu ------------------------------ */
+/* Overlay */
+.overlay {
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+/* Nav Menu Items */
+nav,
+nav ul {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
 
-/* --- Menu Bars ------------------------------------ */
+nav li:nth-of-type(1) {
+    background-color: var(--navColor1);
+}
+nav li:nth-of-type(2) {
+    background-color: var(--navColor2);
+}
+nav li:nth-of-type(3) {
+    background-color: var(--navColor3);
+}
+nav li:nth-of-type(4) {
+    background-color: var(--navColor4);
+}
+nav li:nth-of-type(5) {
+    background-color: var(--navColor5);
+}
 
+nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    list-style: none;
+}
+nav ul li {
+    height: 20%;
+    overflow: hidden;
+}
+
+nav li a {
+    position: relative;
+    top: 45%;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+nav li a:hover {
+    transform: scale(1.2);
+}
+
+nav li a:hover::before {
+    content: '';
+    width: 25vw;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: 47.5%;
+    left: 0;
+}
+
+/* --- Menu Bars ------------------------------------  */
 .menu-bars {
     position: fixed;
     top: 1rem;
